--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,21 @@
 {
-    "manifest_version": 3,
-    "name": "Color Changer",
-    "version": "0.0.0"
+  "manifest_version": 3,
+  "name": "Color Changer",
+  "version": "0.0.0",
+
+  "icons": {
+    "128": "assets/icon128.png"
+  },
+  "background": {
+    "service_worker": "service_worker.js",
+    "type": "module"
+  },
+  "action": { },
+  "permissions": [
+    "scripting"
+  ],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ]
 }
